--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Crediall</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="../../../assets/img/logo_crediall.png">
+  <link rel="icon" type="image/x-icon" href="/assets/img/logo_crediall.png">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
 <body>
